Fix getPlayers() in TriggerAttachment. (#10526)
* Fix getPlayers() in TriggerAttachment.

* Remove import.